--- a/Mango.Web/Views/Coupon/CouponDelete.cshtml
+++ b/Mango.Web/Views/Coupon/CouponDelete.cshtml
@@ -1,9 +1,10 @@
 ﻿@model CouponDTO
 
-<form asp-action="CouponCreate">
+<form asp-action="CouponDelete">
     <br />
     <div class="container border p-3">
-        <h1 class="text-primary text-center">Criar Cupom</h1>
+        <h1 class="text-primary text-center">Deletar Cupom</h1>
+        <input asp-for="couponId" hidden />
         <hr />
         <div class="row">
 
@@ -11,36 +12,29 @@
                 <label class="control-label pt-2" style="font-size:20px;">Código do Cupom</label>
             </div>
             <div class="col-10 pb-3">
-                <input asp-for="couponCode" class="form-control" />
-                <span asp-validation-for="couponCode" class="text-danger"></span>
+                <input asp-for="couponCode" disabled class="form-control" />
             </div>
 
             <div class="col-2">
                 <label class="control-label pt-2" style="font-size:20px;">Quantidade do Desconto</label>
             </div>
             <div class="col-10 pb-3">
-                <input asp-for="discountAmount" class="form-control" />
-                <span asp-validation-for="discountAmount" class="text-danger"></span>
+                <input asp-for="discountAmount" disabled class="form-control" />
             </div>
 
             <div class="col-2">
                 <label class="control-label pt-2" style="font-size:20px;">Quantidade Mínima</label>
             </div>
             <div class="col-10 pb-3">
-                <input asp-for="minAmount" class="form-control" />
-                <span asp-validation-for="minAmount" class="text-danger"></span>
+                <input asp-for="minAmount" disabled class="form-control" />
             </div>
 
             <div class="col-5 offset-2">
                 <a asp-action="CouponIndex" class="btn-primary btn form-control"> Ver Cupons</a>
             </div>
             <div class="col-5">
-                <input type="submit" value="Criar Cupom" class="btn-success btn form-control" />
+                <input type="submit" value="Deletar Cupom" class="btn-danger btn form-control" />
             </div>
         </div>
     </div>
 </form>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
